--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crafty+Girls&family=Poppins&display=swap');
+
+
+
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins","Crafty Girls Family", sans-serif;
+  
+}
+/*--Colors--*/
+:root{
+  --FirstColor: #ef6817;
+  --SecondColor: #5f605d;
+  --ThirdColor: #383838;
+  --FourthColor: #F7FBFF; 
+  --BodyColor: #F6FBFE;
+}
+body{
+  background: var(--BodyColor);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a{
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.icon{
+  font-size: 2rem;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.grid{
+  display: grid;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  padding: .6rem 1.5rem;
+  background: var(--FirstColor);
+  border-radius: 3rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn a{
+  color: var(--SecondColor);
+  font-weight: 500;
+}
+
+.btn:hover{
+  background-color: var(--ThirdColor);
 }
