--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,42 +1,26 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+
+
+
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins","Crafty Girls Family", sans-serif;
+  
+}
+/*--Colors--*/
+:root{
+  --FirstColor: #ef6817;
+  --SecondColor: #5f605d;
+  --ThirdColor: #383838;
+  --FourthColor: #F7FBFF; 
+  --FifthColor: #d1cdca;
+  --SixthColor: #edebe8;
+  --BodyColor: #F6FBFE;
+}
+body{
+  background: var(--BodyColor);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.wrapper {
-  padding: 20px;
-}
