--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -14,6 +14,8 @@ h1{
     color: var(--SixthColor);
     font-size: 3rem;
 }
+
+/*--Input part--*/
 input{
     background: var(--SixthColor);
     border-radius: 8px;
@@ -23,7 +25,7 @@ input{
     margin-bottom: 1em;
     width: 100%;
     font-family: inherit;
-    color: var(--ThirdColor);
+    color: var(--SecondColor);
     font-size: inherit
 }
 
@@ -94,4 +96,7 @@ p{
 
 img{
   height:100px;
+}
+img:hover{
+  transform: scale(1.3); 
 }
