--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -18,6 +18,7 @@
   --FourthColor: #F7FBFF; 
   --FifthColor: #d1cdca;
   --SixthColor: #edebe8;
+  --SeventhColor: #e7f2f9;
   --BodyColor: #F6FBFE;
 }
 body{
