--- a/src/components/animal-items/AnimalCard/AnimalCard.css
+++ b/src/components/animal-items/AnimalCard/AnimalCard.css
@@ -1,19 +1,21 @@
 * {
     padding: 1px;
     margin: 0;
-    background-color: var(--BodyColor);
     box-sizing: border-box;
+    
     
   }
 
 
 body{
-    background-color: var(--BodyColor);
+    background-color: var(--FirstColor);
     min-height: 80vh;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    
 
 }
 
@@ -27,25 +29,9 @@ body{
     align-items: center;
 }
 
-/*-- .pet-img{
-    
-    background: #fff;
-    position: relative;
-}
-.pet-listing{
-    width: 60%;
-    height: auto;
-    background: var(--SixthColor);
-    padding: 40px;
-    display: flex;
-    justify-content: center;
-    color: var(--FifthColor);
 
-
-} --*/
-
-button{
-    background-color: var(--FirstColor);
+.adoptBtn{
+    background-color: var(--SecondColor);
     color: white;
     font-size: 20px;
     font-weight: 500;
@@ -59,7 +45,7 @@ button{
 }
 
 button:hover{
-    background-color:var(--SecondColor);
+    background-color:var(--FirstColor);
     transform: scale(1.1);
 }
 
@@ -70,34 +56,93 @@ h1{
 p .title_start{
     color: var(--ThirdColor);
     font-weight: 600;
+    font-size: 17px;
+    margin-top: -2rem;
 }
 p .title_end{
-    color: var(--SecondColor)
+    color: var(--SecondColor);
+    font-weight: 600;
+    font-size: 15px;
+    margin-top: -2rem;
+
 }
-ul{
-    color: var(--ThirdColor);
+.description{
+    font-size:10px;
+}
+.title{
+    color: var(--FirstColor);
     font-weight: bold;
+    font-size: 30px;
+
+}
+
+.title_start{
+    color: var(--ThirdColor);
+    font-weight: 600;
+    font-size: 16px;
+    margin-top: -2rem;
+
+}
+.country{
+    color: var(--SecondColor);
+    font-weight: 600;
+    font-size:15px;
+}
+.email{
+    color: var(--SecondColor);
+    font-weight: 600;
+    font-size:15px;
+}
+
+ul{
+    
+    color: var(--ThirdColor);
+    font-weight: 600;
+    font-size:16px;
+    display: inline-block;
+    overflow: auto;
 
 }
 u{
     color: var(--FirstColor)
 }
 
-.i-left{
-    display: flex;
-    height: 77vh;
-    margin-top:6rem;
-    flex-direction: column;
-    gap: 2rem;
+
+img{
+    height: 300px;
+    border-radius: 8px;
+    padding: -3rem;
 }
 
-.i.right{
-    flex:1;
-    position: relative;
+.card{
+    
+    background-color: white;
+    max-width: 50em;
+    margin-top: 1em;
+    margin-left: 2em;
+    padding: 3em;
+    border-radius: 18px;
+    box-shadow: 1em 1em 6em rgba(243, 166, 107, 0.8);
+
 }
 
-.intro{
-    display: flex;
-    height: 77vh;
-    margin-top: 6rem;
+.card:hover{
+    transform: scale(0.5.1);
+}
+
+
+
+h6{
+    color: var(--FirstColor);
+    font-weight: 600;
+}
+.description{
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--SecondColor);
+}
+
+.status{
+    color: var(--FirstColor);
+    font-weight: 600;
 }
