--- a/src/components/organization-items/Organization.css
+++ b/src/components/organization-items/Organization.css
@@ -1,33 +1,84 @@
-.title_start{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font: bolder;
+*{
+    padding: 1px;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    color: aliceblue;
     
 }
-.title_end{
-    /* font-family: cursive; */
-    color: beige;
+
+body{
+    min-height: 80vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#visitBtn{
+    background-color: var(--FirstColor);
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 1px 25px;
+    border:none;
+    height: 40px;
+    width: 120px;
+    margin-top: -0.8rem;
+    border-radius: 28px;
+    align-items: center;
 }
 
 .card{
-    /* text-align: -webkit-center; */
-    background-color: darksalmon;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    /* font-size: 20px;
-    padding: 10px; */
+    background-color: white;
+    max-width: 40em;
+    max-height: fit-content;
+    margin-top: 1em;
+    margin-left: 2em;
+    margin-bottom: 2em;
+    padding: 2em;
+    border-radius: 18px;
+    box-shadow: 1em 1em 6em rgba(243, 166, 107, 0.8);
+    
 }
 
-
-#visitBtn:hover{
-    cursor: pointer;
+.card:hover{
+    transform: scale(1.1);
 }
-#visitBtn{
-    background-color: #191817; /* Green */
-    border: none;
-    border-radius: 8px;
+
+.card-title{
+    color: var(--FirstColor)
+}
+
+#contact{
+    color:var(--FirstColor);
+    font-size:20px;
+}
+
+p{
+    margin-top: -0.8rem;
+}
+
+p .title_start{
+    color: var(--ThirdColor);
+    font-weight: 600;
+    font-size:17px;
+    margin-top: -2rem;
+
+}
+p .title_end{
+    color: var(--SecondColor);
+    font-weight: 600;
+    font-size:15px;
+    margin-top: -2rem;
+
+}
+
+h1{
+    font-size: 30px;
+}
+
+a{
     color: white;
-    padding: 12px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
 }
