animal lists is being accessed through routing

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 
 
@@ -53,4 +53,4 @@ a{
 
 .btn:hover{
   background-color: var(--ThirdColor);
-}
+} */
