--- a/src/components/organization-items/Organization.css
+++ b/src/components/organization-items/Organization.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    color: aliceblue;
+    color: rgb(240, 240, 255);
     
 }
 
