--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-
-
-
 *{
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  font-family: "Poppins","Crafty Girls Family", sans-serif;
+  font-family: "Poppins", sans-serif;
   
 }
 /*--Colors--*/
@@ -27,4 +24,6 @@ body{
 
 a{
   text-decoration: none;
+  color: var(--SecondColor);
+  background-color: none;
 }
