--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -68,6 +68,7 @@ body{
   transform: scale(0.69);
   left: -20%;
   top: 7%;
+  
 }
 
 .i-right > :nth-child(2) {
@@ -80,7 +81,7 @@ body{
   transform: scale(1.4);
   left: 28px;
 }
-
+/*--Home Button--*/
 #home-btn {
   background-color: var(--SecondColor);
   color: white;
@@ -97,6 +98,8 @@ body{
 #home-btn:hover {
   background-color: var(--FirstColor);
 }
+
+/*--Home Image--*/
 
 #home-img {
   position: absolute;
@@ -186,94 +189,3 @@ body{
 }
 
 --*/
-
-  .i-left {
-    display: flex;
-    position: relative;
-    flex: 1;
-    flex-direction: column;
-    gap: 2rem;
-  }
-  
-  .i-name {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .i-name > :nth-child(1) {
-    color: var(--SecondColor);
-    font-weight: 600;
-    font-size: 3.5rem;
-    margin-top: 6rem;
-    margin-left: 1rem;
-  }
-  
-  .i-name > :nth-child(2) {
-    color: var(--FirstColor);
-    font-weight: 600;
-    font-size: 3.5rem;
-    margin-top: -1rem;
-    margin-left: 1rem;
-  }
-  
-  .i-name > :nth-child(3) {
-    font-weight: 100;
-    font-size: 30px;
-    color: var(--SecondColor);
-    margin-left: 1rem;
-    margin-top: -1rem;
-  }
-  
-  .i-right {
-    flex: 1;
-    position: relative;
-  }
-  
-  .i-right > * {
-    position: relative;
-    z-index: 1;
-  }
-  
-  .i-right > :nth-child(1) {
-    transform: scale(0.69);
-    left: -20%;
-    top: 7%;
-    
-  }
-  
-  .i-right > :nth-child(2) {
-    top: -4.6%;
-    transform: scale(0.67);
-    left: -3rem;
-  }
-  
-  .i-right > :nth-child(3) {
-    transform: scale(1.4);
-    left: 28px;
-  }
-  
-  #home-btn {
-    background-color: var(--SecondColor);
-    color: white;
-    font-size: 20px;
-    padding: 10px 25px;
-    border: none;
-    border-radius: 25px;
-    height: 50px;
-    width: 150px;
-    margin-top: -0.8rem;
-    margin-left: 1rem;
-  }
-  
-  #home-btn:hover {
-    background-color: var(--FirstColor);
-  }
-
-#home-img {
-    position: absolute;
-    height: 650px;
-    width: 950px;
-    object-fit: cover;
-    margin-right: -5rem;
-    margin-top: -5rem;
-  }
