--- a/src/components/animal-items/AnimalCard/AnimalCard.css
+++ b/src/components/animal-items/AnimalCard/AnimalCard.css
@@ -8,18 +8,15 @@
 
 
 body{
-    background-color: var(--FirstColor);
     min-height: 80vh;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    
 
 }
 
-.pet{
+/*--.pet{
     position: relative;
     min-width: 350px;
     min-height: 500px;
@@ -27,36 +24,37 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} --*/
 
+/*--Button--*/
 
 .adoptBtn{
-    background-color: var(--SecondColor);
-    color: white;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 10px 25px;
-    border: none;
+    background: var(--SecondColor);
+    color:#fff;
+    font-family: inherit;
     border-radius: 28px;
-    height: 45px;
-    width: 130px;
-    margin-top: -0.8rem;
+    padding: 12px 30px;
+    border: none;
+    font-weight: bold;
+    font-size: 15px;
+    box-shadow: 1em 2em 2.5em rgba(1, 1, 50, 0.1);
+    cursor: pointer;
+    font-family: inherit;
+    letter-spacing: 1px;
 
 }
 
-button:hover{
+.adoptBtn:hover{
     background-color:var(--FirstColor);
     transform: scale(1.1);
 }
 
-h1{
-    color: var(--FirstColor)
-}
+/*--Details--*/
 
 p .title_start{
     color: var(--ThirdColor);
     font-weight: 600;
-    font-size: 17px;
+    font-size: 18px;
     margin-top: -2rem;
 }
 p .title_end{
@@ -69,11 +67,12 @@ p .title_end{
 .description{
     font-size:10px;
 }
-.title{
+.animal-title{
     color: var(--FirstColor);
     font-weight: bold;
     font-size: 30px;
-
+    background-color: transparent;
+     
 }
 
 .title_start{
@@ -83,6 +82,49 @@ p .title_end{
     margin-top: -2rem;
 
 }
+
+
+ul{
+    
+    color: var(--SecondColor);
+    font-weight: 600;
+    font-size:16px;
+    display: inline-block;
+    overflow: auto;
+
+}
+
+.pet-img{
+    height: 400px;
+    border-radius: 8px;
+    
+}
+
+.card{
+    background-color: white;
+    max-width: 50em;
+    margin-top: 1em;
+    margin-left: 2em;
+    padding: 1em;
+    border-radius: 18px;
+    box-shadow: 1em 1em 6em rgba(243, 166, 107, 0.8);
+
+}
+
+.card:hover{
+    transform: scale(0.5.1);
+}
+
+h1{
+    color: var(--FirstColor)
+}
+
+h6{
+    color: var(--FirstColor);
+    font-weight: 600;
+    font-size: 18px;
+}
+
 .country{
     color: var(--SecondColor);
     font-weight: 600;
@@ -93,49 +135,6 @@ p .title_end{
     font-weight: 600;
     font-size:15px;
 }
-
-ul{
-    
-    color: var(--ThirdColor);
-    font-weight: 600;
-    font-size:16px;
-    display: inline-block;
-    overflow: auto;
-
-}
-u{
-    color: var(--FirstColor)
-}
-
-
-img{
-    height: 300px;
-    border-radius: 8px;
-    padding: -3rem;
-}
-
-.card{
-    
-    background-color: white;
-    max-width: 50em;
-    margin-top: 1em;
-    margin-left: 2em;
-    padding: 3em;
-    border-radius: 18px;
-    box-shadow: 1em 1em 6em rgba(243, 166, 107, 0.8);
-
-}
-
-.card:hover{
-    transform: scale(0.5.1);
-}
-
-
-
-h6{
-    color: var(--FirstColor);
-    font-weight: 600;
-}
 .description{
     font-size: 16px;
     font-weight: bold;
@@ -145,4 +144,7 @@ h6{
 .status{
     color: var(--FirstColor);
     font-weight: 600;
+    font-size: 16px;
 }
+
+
