--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -73,34 +73,14 @@ position: relative;
     transform: scale(1.1);
   
   }
-/*--.login-btn{
-    background: var(--FirstColor);
-    border: none;
-    border-radius: 28px;
-    color: #fff;
-    padding: 12px 40px;
-    font-family: inherit;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    align-items: center;
-    transition: transform 80ms ease-in; 
-    margin-left: 6rem;
-    box-shadow: 1em 2em 2.5em rgba(1, 1, 50, 0.1);
-   
-  }
-  
-.login-btn:hover{
-    background: var(--SecondColor);
-    transform: scale(1.1);
-  } --*/
 
+/*--Login Button--*/
 .l-btn{
-  background: var(--FirstColor);
+  background: var(--SecondColor);
   color:#fff;
   font-family: inherit;
   border-radius: 28px;
-  padding: 12px 40px;
+  padding: 12px 30px;
   border: none;
   font-weight: bold;
   font-size: 15px;
@@ -113,7 +93,7 @@ position: relative;
 }
 
 .l-btn:hover{
-  background: var(--SecondColor);
+  background: var(--FirstColor);
   transform: scale(1.1);
 } 
 
@@ -136,9 +116,10 @@ position: relative;
 
 .login-h1{
     color: var(--FirstColor);
-    font-size: 25px;
+    font-size: 35px;
     font-weight: bold;
     letter-spacing: 2px;
+    margin:3px;
 
 }
 
