--- a/src/components/animal-items/AnimalList/AnimalList.css
+++ b/src/components/animal-items/AnimalList/AnimalList.css
@@ -13,24 +13,31 @@
     display: grid;
     place-items: center;
     display: grid;
+    
 }
-
+.animal-wrapper {
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin-left: 4rem;
+    
+   
+}
 .pet-list-card{
     
     position: relative;
     background-color: var(--FourthColor);
-    width: 20%;
+    width: 23%;
     height: 20%;
     box-shadow: 0 5px 20px rgba(0, 0, 0, .3);
     display: flex;
     flex-direction: column;
-    padding: 0px 10px 0px;
+    padding: 10px 10px 0px;
     border-radius: 10px;
     transition: .3s;
     float: left;
-    
-    
-    
+    margin: 10px;
+       
 }
 
 .pets:hover{
