--- a/src/components/animal-items/AnimalList/AnimalList.css
+++ b/src/components/animal-items/AnimalList/AnimalList.css
@@ -40,7 +40,7 @@
        
 }
 
-.pets:hover{
+.pet-list-card:hover{
     transform: translateY(-15px);
     box-shadow:0 5px 10px rgba(0, 0, 0, .3);
 }
