--- a/src/components/animal-items/AnimalList/AnimalList.css
+++ b/src/components/animal-items/AnimalList/AnimalList.css
@@ -67,11 +67,20 @@ h4{
     font-weight: 500;
 }
 
-.petlist-img{
+.pet-list-img{
     height: 350px;
     width: 100%;
     border-radius: 15px;
    
+}
+.animal-list-item-button{
+    border-radius: 10px;
+    background-color: rgba(0,0,0,16);
+    font-size: 20px;
+    color: bisque;
+    cursor: pointer;
+    margin: 5px;
+    padding: 10px;
 }
 
 
