--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -25,5 +25,6 @@ body{
 a{
   text-decoration: none;
   color: var(--SecondColor);
-  background-color: none;
+  background-color: transparent;
 }
+
