--- a/src/components/animal-items/AnimalCard/AnimalCard.css
+++ b/src/components/animal-items/AnimalCard/AnimalCard.css
@@ -46,7 +46,7 @@ body{
 
 .adoptBtn:hover{
     background-color:var(--FirstColor);
-    transform: scale(1.1);
+    
 }
 
 /*--Details--*/
@@ -112,8 +112,15 @@ ul{
 }
 
 .card:hover{
-    transform: scale(0.5.1);
+    background-color: white;
+    max-width: 50em;
+    margin-top: 1em;
+    margin-left: 2em;
+    padding: 1em;
+    border-radius: 18px;
+    box-shadow: 1em 1em 6em rgba(243, 166, 107, 0.8);
 }
+  
 
 h1{
     color: var(--FirstColor)
